gitops/apps/envoy-gateway-resources/httproute-sre-demo.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sre-demo
spec:
  parentRefs:
  - name: homelab-gateway
    namespace: envoy-gateway-system
    sectionName: https
  hostnames:
  - "sre-demo.homelab.local"
  rules:
  - backendRefs:
    - name: sre-demo
      namespace: sre-demo
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: sre-demo-backend
  namespace: sre-demo
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: envoy-gateway-system
  to:
  - group: ""
    kind: Service
    name: sre-demo
